# URFU-LLM-Agent

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  authorized_key.json  docker-compose.yml  kapibara.txt  moder.py  moder_api.py  moder_nlp_api.py  pyproject.toml  pythonBot.py
.github/workflows/: ci.yml  deploy.yml
Moderation-nlp/: Dockerfile
Moderation-regex/: moder_api.py
Telegram/: Dockerfile  main.py
Telegram_bot/: Dockerfile  main.py
lectures/: AllAboutAouthOnYndexService.ipynb  Less1.Ipynb  RagLearn.ipynb  less5.ipynb  microservice.ipynb
llm-agent/: Dockerfile  yanka.py
llm_agent/: Dockerfile  yanka.py
moderation_nlp/: Dockerfile  moder_nlp_api.py
moderation_regex/: Dockerfile  moder.py  moder_api.py
rag/: Dockerfile  api.py  rag.py
telegram_bot/: Dockerfile  main.py
utils/requirements/: dev.txt
