[project]
name = "test_bot"
version = "0"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42.0.0",
    "fastapi>=0.116.2",
    "pydantic>=2.9.0",
    "PyJWT>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
  "coverage>=7.6.12",
  "mypy>=1.15.0",
  "ruff>=0.13.0",
  "isort>=5.12.0",
]
llm = [
    "fastapi>=0.116.2",
    "requests>=2.32.5",
    "transformers>=4.56.1",
    "uvicorn>=0.35.0",
    "python-dotenv>=1.1.1",
]
rag = [
    "fastapi>=0.116.2",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
    "cryptography>=42.0.0",
    "pydantic>=2.9.0",
    "PyJWT>=2.10.1",
    "python-dotenv>=1.1.1",
    "boto3>=1.40.33",
    "langchain-huggingface>=0.3.1",
    "langchain-community>=0.3.29",
    "faiss-cpu>=1.12.0",
    "pypdf>=6.0.0",
    "sentence-transformers>=5.1.0",
]
tg = [
    "python-telegram-bot>=22.4",
    "cryptography>=42.0.0",
    "pydantic>=2.9.0",
    "PyJWT>=2.10.1",
]
moder-nlp = [
    "fastapi>=0.116.2",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "uvicorn>=0.35.0",
    "python-dotenv>=1.1.1",
    "pydentic>=0.0.1.dev3"
]

[tool.ruff]
line-length = 88
target-version = "py312"
cache-dir = ".ruff_cache"
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "dist",
  "build",
  ".ruff_cache",
  "lectures",
]


respect-gitignore = true

[lint]
select = ["E", "F", "W", "C90", "I"]
ignore = ["ANN401", "DJ001", "DJ007", "FBT001", "FBT002", "S311"]

[tool.isort]
profile = "black"
line_length = 88
